# deepfake_audio_manager

./: .gitignore  README.md  pyproject.toml
deepfake_audio_manager/: guiFunctions.py  profileFunctions.py
elevenlabs-voice-manager/: guiFunctions.py  main.py  profileFunctions.py
